# Code_exemple

Exercices_PHP/Ex-02-/: Ex-02-01.php  Ex-02-02.php  Ex-02-03.php  Ex-02-04.php  Ex-02-05.php  Ex-02-06.php
Exercices_PHP/Ex-03-/: Ex-03-01.php  ex_03_02.php
Exercices_PHP/Ex-04-/Ex-04-04/: commande.php  produits.php  recap.php
Exercices_PHP/Ex-07-/: ex-07-01a-b.php
Exercices_PHP/Ex-07-/ex-07-01/: class-rectangle.php  ex-07-01.php
Exercices_PHP/Ex-07-/ex-07-02/: Person.php
Exercices_PHP/Ex-09-/: Ex-09-01.php
Exercices_PHP/Ex.01-/: Ex.01-03  Ex.01-05  Ex.01-06  Ex.01-07  Ex.01-08  Ex.01-09  Ex.01-10  Ex.01-11  Ex.01_04  ex-01-12.php
Exercices_PHP/ex-cookie/: cookie.php  cookieEN.php  cookieFR.php
Exercices_PHP/ex-login/: login.html  login.php  logout.php  zonelogin.php  zoneprivee.php
Exercices_PHP/ex-login-cookie/: logout.php  main.php  zoneprivee.php
HEIG/: CMakeLists.txt  pseudo.md  receuil_exercice.cpp
HEIG/ClasseRecueuilExercice/: Date.cpp  jours_entre.cpp  maLibrairie.cpp  to_string.cpp
HEIG/Labos/Labo2/: Labo_02.cpp
HEIG/Labos/Labo3/: Labo_03.cpp
HEIG/Labos/Labo4/: Labo_04.cpp
HEIG/Labos/Labo5/: main.cpp  montantEnToutesLettres.cpp  montantEnToutesLettres.h
HEIG/MesLibrairies/: Date.h  jours_entre.h  maLibrairie.h  personne.h  to_string.h
Jeu_du_memorie_html_css_js/: index.html
Jeu_du_memorie_html_css_js/css/: style.css
Jeu_du_memorie_html_css_js/js/: main.js
L2-Recursivite/: README.md
L2-Recursivite/enonce/: README.md
L2-Recursivite/rapport/: README.md
L2-Recursivite/src/: attachment.cpp  attachment.h
(+5 files in other folders)
